Redid the wrap stylings to be more natural. Fixed error where campus filter was not being regarded during initial menu item call. Added uploadable Friedberg schedule.

--- a/com_thm_organizer/media/css/schedule.css
+++ b/com_thm_organizer/media/css/schedule.css
@@ -466,9 +466,8 @@ input[type=radio] {
 .name {
     display: inline-block;
     font-weight: bold;
-    word-wrap: break-word;
-    word-break: break-all;
-    white-space: pre-wrap;
+    word-break: break-word;
+    white-space: pre-line;
 }
 
 .module:before {
